name:                other-file
version:             0.1.0.0
synopsis:            Trivial project to show an issue with `cabal repl`
description:         This project contains one modules, A and a module that is
                     not listed in the cabal file B.hs. Trying to load B.hs using
                     `cabal repl` fails because B is not listed in the cabal file.
license:             MIT
license-file:        LICENSE
author:              Erik de Castro Lopo
maintainer:          erikd@mega-nerd.com
copyright:           (c) 2016 Erik de Castro Lopo
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     A

  build-depends:       base

  default-language:    Haskell2010
